Dynamic card count in hero (lime bold), update meta tags to 80+

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <!-- SEO Meta Tags -->
   <title>Best Crypto Cards 2026 | Compare USDC & Bitcoin Debit Cards | Spendbase</title>
-  <meta name="description" content="Compare 70+ crypto debit cards. Find the best USDC cards, Bitcoin cards, and stablecoin spending cards with up to 15% cashback. Self-custody & non-custodial options. No FX fees.">
+  <meta name="description" content="Compare 80+ crypto debit cards. Find the best USDC cards, Bitcoin cards, and stablecoin spending cards with up to 15% cashback. Self-custody & non-custodial options. No FX fees.">
   <meta name="keywords" content="crypto card, crypto debit card, USDC card, bitcoin card, stablecoin card, cryptocurrency card, self-custody card, non-custodial card, crypto cashback, best crypto card 2026">
   <meta name="author" content="Spendbase">
   <meta name="robots" content="index, follow">
@@ -24,7 +24,7 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://spendbase.cards">
   <meta property="og:title" content="Best Crypto Cards 2026 | Compare USDC & Bitcoin Debit Cards">
-  <meta property="og:description" content="Compare 70+ crypto debit cards. Find the best USDC cards, Bitcoin cards, and stablecoin spending cards with up to 15% cashback.">
+  <meta property="og:description" content="Compare 80+ crypto debit cards. Find the best USDC cards, Bitcoin cards, and stablecoin spending cards with up to 15% cashback.">
   <meta property="og:image" content="https://spendbase.cards/og-image.png">
   <meta property="og:site_name" content="Spendbase">
 
@@ -32,7 +32,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://spendbase.cards">
   <meta name="twitter:title" content="Best Crypto Cards 2026 | Compare USDC & Bitcoin Debit Cards">
-  <meta name="twitter:description" content="Compare 70+ crypto debit cards. Find the best USDC cards, Bitcoin cards, and stablecoin spending cards with up to 15% cashback.">
+  <meta name="twitter:description" content="Compare 80+ crypto debit cards. Find the best USDC cards, Bitcoin cards, and stablecoin spending cards with up to 15% cashback.">
   <meta name="twitter:image" content="https://spendbase.cards/og-image.png">
 
   <link rel="icon" type="image/png" href="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public">
@@ -45,7 +45,7 @@
     "name": "Spendbase",
     "url": "https://spendbase.cards",
     "logo": "https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public",
-    "description": "The leading crypto card comparison platform. Compare 70+ cryptocurrency debit cards.",
+    "description": "The leading crypto card comparison platform. Compare 80+ cryptocurrency debit cards.",
     "sameAs": []
   }
   </script>
@@ -121,7 +121,7 @@
   {
     "@context": "https://schema.org",
     "@type": "Article",
-    "headline": "Best Crypto Cards 2026 - Compare 70+ USDC & Bitcoin Debit Cards",
+    "headline": "Best Crypto Cards 2026 - Compare 80+ USDC & Bitcoin Debit Cards",
     "description": "Compare the top cryptocurrency debit cards for spending Bitcoin, USDC, and other digital assets. Find self-custody options with up to 15% cashback.",
     "author": {
       "@type": "Organization",
@@ -1736,7 +1736,7 @@ function CardsView({ darkMode, searchTerm, ratings, onRate, userRatedCards, comp
           <div>
             <h1 className={`text-2xl sm:text-4xl font-bold mb-2 sm:mb-3 ${darkMode ? 'text-white' : 'text-gray-900'}`}>Best Crypto Cards 2026</h1>
             <p className={`text-sm sm:text-lg mb-3 sm:mb-4 ${darkMode ? 'text-gray-300' : 'text-gray-700'}`}>
-              Compare {allCards.length}+ crypto debit cards, USDC cards, and Bitcoin cards.
+              Compare <span className="text-lime-400 font-bold">{allCards.length}+</span> crypto debit cards, USDC cards, and Bitcoin cards.
             </p>
             <div className={`text-xs sm:text-sm ${darkMode ? 'text-gray-400' : 'text-gray-600'} hidden sm:block`}>
               <span className="inline-flex items-center gap-2 mr-4">✓ Self-custody & non-custodial cards</span>
