--- a/index.html
+++ b/index.html
@@ -738,28 +738,29 @@ function Card({ card, ratings, onRate, darkMode = true, userRatedCards = {}, isI
               </div>
               {card.network === 'Visa' ? <VisaLogo /> : <MastercardLogo />}
             </div>
-            {/* Chain and Token row at very bottom */}
+            {/* Tags row at very bottom — matches filter categories */}
             <div className="flex items-center justify-between mt-1 relative z-10">
-              <div className="flex items-center gap-2 flex-wrap">
-                <span className="text-xs bg-black/20 text-cyan-300 px-2 py-1 rounded">{card.chain}</span>
-                {card.token && (
-                  card.token.live ? (
-                    <span className="text-xs bg-gradient-to-r from-amber-400/30 to-orange-500/30 border border-amber-400/50 text-amber-300 px-2 py-1 rounded">
-                      <span className="font-bold">${card.token.ticker}</span>
-                    </span>
-                  ) : (
-                    <span className="text-xs bg-gray-500/30 border border-gray-500/50 text-gray-300 px-2 py-1 rounded">
-                      <span className="font-medium">${card.token.ticker}</span>
-                    </span>
-                  )
-                )}
-                {card.showFrontTags && (
-                  <>
-                    <span className={`text-[9px] px-1.5 py-0.5 rounded font-bold ${catStyle.bg} ${catStyle.text}`}>{catStyle.label}</span>
-                    {card.archetype && <span className={`text-[9px] px-1.5 py-0.5 rounded font-bold ${card.archetype === 'exchange' ? 'bg-blue-500/20 text-blue-300' : card.archetype === 'wallet' ? 'bg-orange-500/20 text-orange-300' : card.archetype === 'defi' ? 'bg-cyan-500/20 text-cyan-300' : 'bg-purple-500/20 text-purple-300'}`}>{archetypeLabels[card.archetype]}</span>}
-                    {(card.custody === 'Self-Custody' || card.custody === 'Non-Custodial') && <span className="text-[9px] px-1.5 py-0.5 rounded font-bold bg-lime-400/20 text-lime-300 border border-lime-400/30">{card.custody}</span>}
-                  </>
-                )}
+              <div className="flex items-center gap-1.5 flex-wrap">
+                {/* Chain */}
+                <span className="text-[9px] bg-violet-500/20 text-violet-300 px-1.5 py-0.5 rounded font-bold">{card.chain}</span>
+                {/* Rewards payout type */}
+                {(() => {
+                  const t = card.cashbackToken || '';
+                  const stb = ['USDC','USDT','CASH','Stablecoin'];
+                  const csh = ['USD','Fiat'];
+                  const isCash = csh.includes(t) || t === 'BTC/Fiat';
+                  const isStable = stb.some(s => t.toUpperCase().includes(s.toUpperCase())) && !isCash;
+                  const isToken = card.token?.live && !isStable && !isCash;
+                  if (isToken) return <span className="text-[9px] bg-amber-500/20 text-amber-300 border border-amber-500/40 px-1.5 py-0.5 rounded font-bold">${card.token.ticker}</span>;
+                  if (isStable) return <span className="text-[9px] bg-teal-500/20 text-teal-300 px-1.5 py-0.5 rounded font-bold">{t}</span>;
+                  if (isCash) return <span className="text-[9px] bg-green-500/20 text-green-300 px-1.5 py-0.5 rounded font-bold">Cash</span>;
+                  if (t && t !== 'TBD' && t !== 'N/A' && t !== 'None') return <span className="text-[9px] bg-gray-500/20 text-gray-300 px-1.5 py-0.5 rounded font-bold">{t}</span>;
+                  return null;
+                })()}
+                {/* Custody */}
+                {(card.custody === 'Self-Custody' || card.custody === 'Non-Custodial') && <span className="text-[9px] px-1.5 py-0.5 rounded font-bold bg-lime-400/20 text-lime-300 border border-lime-400/30">Self-Custody</span>}
+                {/* Fee tier */}
+                {card.annualFee === '$0' && <span className="text-[9px] bg-green-500/20 text-green-300 px-1.5 py-0.5 rounded font-bold">Free</span>}
               </div>
             </div>
           </div>
@@ -769,20 +770,18 @@ function Card({ card, ratings, onRate, darkMode = true, userRatedCards = {}, isI
           <div className="h-full bg-gray-900 rounded-2xl p-3 md:p-4 text-white border border-gray-700 flex flex-col overflow-y-auto">
             <div className="flex items-center justify-between mb-2">
               <div className="flex items-center gap-2">
-                {card.logo ? (
+                {(card.brandLogo || card.logo) ? (
                   card.xHandle ? (
                     <a href={`https://x.com/${card.xHandle}`} target="_blank" rel="noopener noreferrer" onClick={(e) => { e.stopPropagation(); e.preventDefault(); window.open(e.currentTarget.href, '_blank'); }} className="hover:scale-125 hover:drop-shadow-[0_0_8px_rgba(255,255,255,0.5)] transition-all duration-200 cursor-pointer" title={`Follow @${card.xHandle} on X`}>
-                      <img loading="lazy" src={card.logo} alt={card.name} className="h-6 object-contain" style={card.invertLogo ? { filter: 'invert(1) brightness(2)' } : {}} onError={(e) => e.target.style.display='none'} />
+                      <img loading="lazy" src={card.brandLogoBack || card.brandLogo || card.logo} alt={card.name} className={`${card.brandLogoSize || 'h-6'} object-contain`} style={card.invertLogo ? { filter: 'invert(1) brightness(2)' } : {}} onError={(e) => e.target.style.display='none'} />
                     </a>
                   ) : (
-                    <img loading="lazy" src={card.logo} alt={card.name} className="h-6 object-contain" style={card.invertLogo ? { filter: 'invert(1) brightness(2)' } : {}} onError={(e) => e.target.style.display='none'} />
+                    <img loading="lazy" src={card.brandLogoBack || card.brandLogo || card.logo} alt={card.name} className={`${card.brandLogoSize || 'h-6'} object-contain`} style={card.invertLogo ? { filter: 'invert(1) brightness(2)' } : {}} onError={(e) => e.target.style.display='none'} />
                   )
                 ) : (
-                  <>
-                    <img loading="lazy" src={card.logo} alt="" className="w-6 h-6 rounded-full object-contain" onError={(e) => e.target.style.display='none'} />
-                    <span className="font-bold text-sm">{card.name}</span>
-                  </>
+                  <span className="font-bold text-sm">{card.name}</span>
                 )}
+                {card.showBrandName && <span className="font-bold text-sm" style={card.brandNameColor ? { color: card.brandNameColor } : {}}>{card.brandNameText || card.name}</span>}
               </div>
               <div className="flex items-center gap-2">
                 {card.token && (
@@ -798,12 +797,13 @@ function Card({ card, ratings, onRate, darkMode = true, userRatedCards = {}, isI
                     <span className="text-[10px] font-medium">Follow</span>
                   </a>
                 )}
-                {!card.showFrontTags && <span className={`text-[9px] px-2 py-0.5 rounded font-bold ${catStyle.bg} ${catStyle.text}`}>{catStyle.label}</span>}
               </div>
             </div>
             <div className="flex flex-wrap gap-1 mb-2">
               {card.tier && <span className={`text-[10px] px-2 py-0.5 rounded ${card.tier === 'Elite' ? 'bg-yellow-500/20 text-yellow-400' : card.tier === 'Premium' ? 'bg-pink-500/20 text-pink-400' : 'bg-gray-500/20 text-gray-400'}`}>{card.tier}</span>}
-              {!card.showFrontTags && card.archetype && <span className={`text-[10px] px-2 py-0.5 rounded ${card.archetype === 'exchange' ? 'bg-blue-500/20 text-blue-400' : card.archetype === 'wallet' ? 'bg-orange-500/20 text-orange-400' : card.archetype === 'defi' ? 'bg-cyan-500/20 text-cyan-400' : card.archetype === 'stablecoin' ? 'bg-purple-500/20 text-purple-400' : card.archetype === 'bank' ? 'bg-gray-500/20 text-gray-400' : 'bg-purple-500/20 text-purple-400'}`}>{archetypeLabels[card.archetype]}</span>}
+              <span className="text-[10px] px-2 py-0.5 rounded bg-violet-500/20 text-violet-400">{card.chain}</span>
+              {card.archetype && <span className={`text-[10px] px-2 py-0.5 rounded ${card.archetype === 'exchange' ? 'bg-blue-500/20 text-blue-400' : card.archetype === 'wallet' ? 'bg-orange-500/20 text-orange-400' : card.archetype === 'defi' ? 'bg-cyan-500/20 text-cyan-400' : card.archetype === 'stablecoin' ? 'bg-purple-500/20 text-purple-400' : card.archetype === 'bank' ? 'bg-gray-500/20 text-gray-400' : 'bg-purple-500/20 text-purple-400'}`}>{archetypeLabels[card.archetype]}</span>}
+              {card.network && <span className="text-[10px] px-2 py-0.5 rounded bg-gray-600/20 text-gray-400">{card.network}</span>}
             </div>
             <div className="flex-1 overflow-y-auto pr-1">
               <div className="grid grid-cols-2 gap-2 mb-2 text-xs">
