--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@ function Card({ card, ratings, onRate, darkMode = true, userRatedCards = {}, isI
               </div>
               {card.network === 'Visa' ? <VisaLogo /> : <MastercardLogo />}
             </div>
-            {/* Tags row at very bottom — Type · Chain · Rewards · Setup */}
+            {/* Tags row at very bottom — Type · Setup · Chain · Rewards + card count */}
             <div className="flex items-center justify-between mt-1 relative z-10">
               <div className="flex items-center gap-1.5 flex-wrap">
                 {/* Type (archetype) */}
@@ -761,6 +761,8 @@ function Card({ card, ratings, onRate, darkMode = true, userRatedCards = {}, isI
                   return null;
                 })()}
               </div>
+              {/* Card count for this issuer */}
+              {variantCount > 1 && <span className="text-[9px] text-white/50 font-medium whitespace-nowrap">{variantCount} cards</span>}
             </div>
           </div>
         </div>
@@ -769,17 +771,9 @@ function Card({ card, ratings, onRate, darkMode = true, userRatedCards = {}, isI
           <div className="h-full bg-gray-900 rounded-2xl p-3 md:p-4 text-white border border-gray-700 flex flex-col overflow-y-auto">
             <div className="flex items-center justify-between mb-2">
               <div className="flex items-center gap-2">
-                {(card.brandLogo || card.logo) ? (
-                  card.xHandle ? (
-                    <a href={`https://x.com/${card.xHandle}`} target="_blank" rel="noopener noreferrer" onClick={(e) => { e.stopPropagation(); e.preventDefault(); window.open(e.currentTarget.href, '_blank'); }} className="hover:scale-125 hover:drop-shadow-[0_0_8px_rgba(255,255,255,0.5)] transition-all duration-200 cursor-pointer" title={`Follow @${card.xHandle} on X`}>
-                      <img loading="lazy" src={card.brandLogoBack || card.brandLogo || card.logo} alt={card.name} className={`${card.brandLogoSize || 'h-6'} object-contain`} style={card.invertLogo ? { filter: 'invert(1) brightness(2)' } : {}} onError={(e) => e.target.style.display='none'} />
-                    </a>
-                  ) : (
-                    <img loading="lazy" src={card.brandLogoBack || card.brandLogo || card.logo} alt={card.name} className={`${card.brandLogoSize || 'h-6'} object-contain`} style={card.invertLogo ? { filter: 'invert(1) brightness(2)' } : {}} onError={(e) => e.target.style.display='none'} />
-                  )
-                ) : (
-                  <span className="font-bold text-sm">{card.name}</span>
-                )}
+                <a href="#" onClick={(e) => { e.stopPropagation(); e.preventDefault(); window.dispatchEvent(new CustomEvent('navigateToCard', { detail: card })); }} className="hover:scale-110 transition-transform duration-200 cursor-pointer" title={`Learn more about ${card.name}`}>
+                  <img loading="lazy" src={card.brandLogoBack || card.brandLogo || card.logo} alt={card.name} className={`${card.brandLogoSize || 'h-6'} object-contain`} style={card.invertLogo ? { filter: 'invert(1) brightness(2)' } : {}} onError={(e) => e.target.style.display='none'} />
+                </a>
                 {card.showBrandName && <span className="font-bold text-sm" style={card.brandNameColor ? { color: card.brandNameColor } : {}}>{card.brandNameText || card.name}</span>}
               </div>
               <div className="flex items-center gap-2">
@@ -797,12 +791,6 @@ function Card({ card, ratings, onRate, darkMode = true, userRatedCards = {}, isI
                   </a>
                 )}
               </div>
-            </div>
-            <div className="flex flex-wrap gap-1 mb-2">
-              {card.tier && <span className={`text-[10px] px-2 py-0.5 rounded ${card.tier === 'Elite' ? 'bg-yellow-500/20 text-yellow-400' : card.tier === 'Premium' ? 'bg-pink-500/20 text-pink-400' : 'bg-gray-500/20 text-gray-400'}`}>{card.tier}</span>}
-              <span className="text-[10px] px-2 py-0.5 rounded bg-violet-500/20 text-violet-400">{card.chain}</span>
-              {card.archetype && <span className={`text-[10px] px-2 py-0.5 rounded ${card.archetype === 'exchange' ? 'bg-blue-500/20 text-blue-400' : card.archetype === 'wallet' ? 'bg-orange-500/20 text-orange-400' : card.archetype === 'defi' ? 'bg-cyan-500/20 text-cyan-400' : card.archetype === 'stablecoin' ? 'bg-purple-500/20 text-purple-400' : card.archetype === 'bank' ? 'bg-gray-500/20 text-gray-400' : 'bg-purple-500/20 text-purple-400'}`}>{archetypeLabels[card.archetype]}</span>}
-              {card.network && <span className="text-[10px] px-2 py-0.5 rounded bg-gray-600/20 text-gray-400">{card.network}</span>}
             </div>
             <div className="flex-1 overflow-y-auto pr-1">
               <div className="grid grid-cols-2 gap-2 mb-2 text-xs">
