--- a/index.html
+++ b/index.html
@@ -2395,8 +2395,8 @@ function CardsView({ darkMode, searchTerm, ratings, onRate, userRatedCards, comp
         );
       })()}
 
-      {/* UNIFIED FILTER TABS */}
-      {(() => {
+      {/* UNIFIED FILTER TABS — hidden when searching */}
+      {!effectiveSearch && (() => {
         const liveCards = allCards.filter(c => !c.comingSoon);
         const tabs = [
           { id: 'all', label: 'All Cards', labelShort: 'All', count: liveCards.length },
@@ -2442,8 +2442,8 @@ function CardsView({ darkMode, searchTerm, ratings, onRate, userRatedCards, comp
         );
       })()}
 
-      {/* FILTERS — compact row */}
-      <div className={`rounded-xl p-3 mb-5 ${darkMode ? 'bg-gray-900/50 border border-gray-800' : 'bg-gray-50 border border-gray-200'}`}>
+      {/* FILTERS — compact row, hidden when searching */}
+      {!effectiveSearch && <div className={`rounded-xl p-3 mb-5 ${darkMode ? 'bg-gray-900/50 border border-gray-800' : 'bg-gray-50 border border-gray-200'}`}>
         <div className="flex flex-wrap gap-x-6 gap-y-2 items-end">
           <div><label className={`text-[10px] sm:text-xs mb-1 block ${darkMode ? 'text-gray-500' : 'text-gray-500'}`}>Setup</label><div className="flex gap-1">{[{id:'all',label:'All'},{id:'self',label:'Self-Custody'},{id:'custodial',label:'Custodial'},{id:'kyc',label:'KYC'},{id:'lightkyc',label:'Light KYC'},{id:'nokyc',label:'No KYC'}].map(f => <button key={f.id} onClick={() => setCustodyFilter(f.id)} className={`px-2 py-1 rounded text-[10px] sm:text-xs font-medium ${custodyFilter === f.id ? 'bg-cyan-400 text-gray-900' : (darkMode ? 'bg-gray-800 text-gray-300' : 'bg-gray-200 text-gray-600')}`}>{f.label}</button>)}</div></div>
           <div><label className={`text-[10px] sm:text-xs mb-1 block ${darkMode ? 'text-gray-500' : 'text-gray-500'}`}>Issuer / OS</label><div className="flex gap-1">{[{id:'all',label:'All'},{id:'visa',label:'Visa'},{id:'mastercard',label:'MC'},{id:'ios',label:'iOS'},{id:'android',label:'Android'},{id:'web',label:'Web'}].map(f => <button key={f.id} onClick={() => { if (f.id === 'all') { setNetworkFilter('all'); setPlatformFilter('all'); } else if (['ios','android','web'].includes(f.id)) { setPlatformFilter(f.id); setNetworkFilter('all'); } else { setNetworkFilter(f.id); setPlatformFilter('all'); } }} className={`px-2 py-1 rounded text-[10px] sm:text-xs font-medium ${(f.id === 'all' && networkFilter === 'all' && platformFilter === 'all') || (f.id === networkFilter && f.id !== 'all') || (f.id === platformFilter && ['ios','android','web'].includes(f.id)) ? 'bg-purple-400 text-gray-900' : (darkMode ? 'bg-gray-800 text-gray-300' : 'bg-gray-200 text-gray-600')}`}>{f.label}</button>)}</div></div>
@@ -2456,7 +2456,7 @@ function CardsView({ darkMode, searchTerm, ratings, onRate, userRatedCards, comp
             {hasActiveFilters && <button onClick={clearFilters} className="text-lime-500 text-xs">Clear</button>}
           </div>
         </div>
-      </div>
+      </div>}
 
       {/* CARDS GRID */}
       <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-6">{visibleCards.map(card => <Card key={card.id} card={card} ratings={ratings} onRate={onRate} darkMode={darkMode} userRatedCards={userRatedCards} isInCompare={compareList?.some(c => c.id === card.id)} onCompareToggle={onCompareToggle} variantCount={card.brand && brandGroups[card.brand] ? brandGroups[card.brand].length : 0} />)}</div>
